# guns-ad

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  README.md  build.sh
.idx/: dev.nix
src/: helper.rs  main.rs
src/helper/: cache.rs  config.rs  discord.rs  progress_bar.rs
src/helper/discord/: channel.rs  message.rs
