[package]
name = "guns-ad"
description = "Automation of sending message on #bio-links channel"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = [ "derive" ] }
reqwest = { version = "0.12.9", features = [ "gzip", "brotli", "deflate", "rustls-tls" ] }
serde = { version = "1.0.216", features = [ "derive" ] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [ "rt", "rt-multi-thread", "macros" ] }
toml = "0.8.19"
urlencoding = "2.1.3"
