[package]
name = "guns-ad"
description = "Automation of sending message on #bio-links channel"
version = "1.1.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = [ "derive" ] }
rand = "0.8.5"
reqwest = { version = "0.12.12", features = [ "gzip", "brotli", "deflate", "rustls-tls", "json" ] }
serde = { version = "1.0.216", features = [ "derive" ] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = [ "rt", "rt-multi-thread", "macros" ] }
toml = "0.8.19"
urlencoding = "2.1.3"
